objects/datamask__Masking_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>datamask__Anonymize_Case_Comments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Case Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datamask__Anonymize_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymize Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datamask__Current_Execution_Id__c</fullName>
        <label>Current Execution Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Delete_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datamask__Delete_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datamask__Delete_Field_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Field History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datamask__Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Last_Id__c</fullName>
        <label>Last Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Named_Credential__c</fullName>
        <label>Named Credential</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Threads_Completed__c</fullName>
        <label>Threads Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>datamask__Threads_Running__c</fullName>
        <label>Threads Running</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Masking Configuration</label>
</CustomObject>